--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         <p>Built with the Web Audio API. Double-click a button to edit its text and color.</p>
     </footer>
 
-    <div id="soundbar-container">
-        <canvas id="soundbar" width="800" height="40"></canvas>
+    <div id="playback-controls">
+        <span id="current-time">0:00</span> / <span id="total-duration">0:00</span>
+        <button id="restart-button">Restart</button>
     </div>
 
     <!-- The Modal -->
