Improves soundboard UI and functionality
Enhances the soundboard with a more modern UI, category-based organization, and improved sound preloading.

- Introduces category blocks for better sound organization
- Adds category icons and styling
- Implements fixes for sound playback and edit mode interaction
- Refactors filtering and sorting logic for efficiency
- Updates CSS for improved aesthetics and responsiveness

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <label for="file-upload" class="custom-file-upload button">Upload Sounds</label>
                 <input id="file-upload" type="file" multiple accept="audio/*">
                 <button id="edit-button">Edit</button>
-                <select id="category-select">''''
+                <select id="category-select">
                     <option value="all">All Categories</option>
                 </select>
                 <select id="sort-select">
@@ -21,7 +21,7 @@
                     <option value="category">Sort by Category</option>
                 </select>
             </div>
-            <div class="control-group search-stop">''''
+            <div class="control-group search-stop">
                 <input type="search" id="search-input" placeholder="Search Sounds...">
                 <button id="stop-all-button">Stop All</button>
             </div>
