--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
                         </select>
                         <span id="edit-color-preview" style="display:inline-block;width:20px;height:20px;border-radius:4px;margin-left:8px;border:1px solid #ccc;background:transparent;"></span>
                         <span style="margin-left:10px;">Text Color:</span>
-                        <input type="color" id="edit-sound-textcolor">
+                        <select id="edit-sound-textcolor" aria-label="Text color">
+                            <option value="#ffffff">White</option>
+                            <option value="#000000">Black</option>
+                            <option value="#232b39">Dark</option>
+                            <option value="#4f8cff">Blue</option>
+                            <option value="#ff5252">Red</option>
+                            <option value="#ffc107">Yellow</option>
+                            <option value="#00e676">Green</option>
+                            <option value="#e040fb">Purple</option>
+                            <option value="#ff6f00">Orange</option>
+                            <option value="#6c757d">Gray</option>
+                        </select>
                     </label>
                     <label>
                         Category:
